t-rex 03.01.2014 04:58:00 +0200 - build 263

1. Фикс кастомной сортировки, уродливо но чтоб намёк был понят.

shmuel 28.12.2013 13:05:44 +0200 - build 262

1. M#2550: Возвращаемое значение для загрузочных функций Macro и Event.
   При успешной загрузке данные функции возвращают число-идентификатор
   загруженного макроса или обработчика события.

shmuel 25.12.2013 18:55:20 +0200 - build 261

1. LuaFAR (far.Timer):
   после закрытия таймера его обработчик не может быть автоматически вызван,
   поэтому больше нет необходимости проверять в обработчике, закрыт ли таймер.

shmuel 16.11.2013 23:14:32 +0200 - build 260

1. LuaFAR: доработана передача параметров функции export.ProcessPanelEvent.

shmuel 12.11.2013 00:06:37 +0200 - build 259

1. LuaFAR: Оказывается, хэндл панели, возвращаемый OpenW(), должен быть уникальным не в пределах
   плагина, а в пределах Фара. Поэтому добавим к нему смещение, равное адресу lua_State плагина.

shmuel 02.11.2013 18:36:31 +0200 - build 258

1. LuaFAR: для элементов плагиновых панелей не заполнялся массив CustomColumnData.

shmuel 30.09.2013 13:54:30 +0200 - build 257

1. LuaFAR (unicode.utf8.format): уточнение билда 141.

shmuel 29.09.2013 21:08:52 +0200 - build 256

1. Уточнение билда 255: сделано одинаково для Lua 5.1 и 5.2.

shmuel 29.09.2013 19:28:05 +0200 - build 255

1. LuaFAR: предотвратим исключение при невалидном 2-м аргументе io.open().
   Из форума: Вот такая строчка в макросе роняет ФАР
     io.open("file","xyz")

shmuel 26.09.2013 12:37:08 +0200 - build 254

1. Macro Browser: по F3 выводится информация о макросе/обработчике события.

shmuel 24.09.2013 16:50:11 +0200 - build 253

1. Уточнение 252.

shmuel 24.09.2013 13:56:53 +0200 - build 252

1. Продолжение M#2390: Передавать параметры скрипту, запущенному через lm:post @
   Глобальная (в пределах окружения скрипта) переменная `_filename` содержит имя файла-скрипта.
   См. начало в лог-записи билда 196.

shmuel 22.09.2013 18:57:29 +0200 - build 251
