@@ -1,3 +1,7 @@
+drkns 03.01.2014 13:38:35 +0200 - build 264
+
+1. Немного упростим 263.
+
 t-rex 03.01.2014 04:58:00 +0200 - build 263
 
 1. Фикс кастомной сортировки, уродливо но чтоб намёк был понят.
